--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,16 @@
   ry: 4px;
   fill: #eee;
 }
+
+.airport {
+  fill: brown;
+  fill-opacity: 0.5;
+  stroke: white;
+  stroke-width: 0.5;
+  z-index: 80;
+}
+.connections {
+  stroke: #444;
+  stroke-width: 1.5;
+  fill: none;
+}
