--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,18 @@ rect {
   ry: 2;
 }
 
-#container1 {
+#container1, #container3 {
   overflow: hidden;
   position: relative;
 }
 
 #container1 svg {
+    width: 80%;
+    height: auto;
+    height: intrinsic;
+}
+
+#container3 svg {
     width: 80%;
     height: auto;
     height: intrinsic;
