Added multiple functional bars

--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,10 @@ rect {
   z-index: 80;
 }
 
+#factorName {
+  color: brown;
+}
+
 .airports circle:hover {
   stroke: yellow;
 }
@@ -99,17 +103,4 @@ rect {
 .connections path:hover {
   stroke-width: 5.0;
   opacity: 1.0;
-}
-
-.ptLabel3 {    
-  fill: white;
-  font-size: 0.75em;
-  fill-opacity: 1.0;
-}
-.ptLabel3 rect {
-  rx: 2px;
-  ry: 2px;
-}
-.ptLabel3 text {
-  fill: black;
 }
