consistent width bars

--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,8 @@ rect {
 .sidebar .inlinebar {
   display: inline-block;
   height: 1em;
-  margin-left: 4px;
-  margin-right: 4px;
+  /* margin-left: 4px; */
+  /* margin-right: 4px; */
 }
 
 .sidebar table {
