--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 :root {
   --color-dark: #252525;
-  --color-light: #e6e6e6;
-  --color-banner: #dddddd;
+  --color-light: #efeee9;
+  --color-banner: #fafafa;
   --color-primary: #1a8fe3;
-  --size-step-0: clamp(1rem, calc(0.96rem + 0.22vw), 1.13rem);
-  --size-step-1: clamp(1.25rem, calc(1.16rem + 0.43vw), 1.5rem);
-  --size-step-2: clamp(1.56rem, calc(1.41rem + 0.76vw), 2rem);
-  --size-step-3: clamp(1.95rem, calc(1.71rem + 1.24vw), 2.66rem);
-  --size-step-4: clamp(2.44rem, calc(2.05rem + 1.93vw), 3.55rem);
+  --size-step-0: 1.13rem;
+  --size-step-1: 1.5rem;
+  --size-step-2: 2rem;
+  --size-step-3: 2.66rem;
+  --size-step-4: 3.55rem;
 }
 
 .flow > * + * {
@@ -97,12 +97,12 @@ a {
   text-underline-offset: 0.3ex;
 }
 
-
 img,
 picture,
 svg {
   max-width: 100%;
   display: block;
+  background: var(--color-light);
 }
 
 input,
@@ -184,7 +184,7 @@ rect {
 }
 
 .hoverdata rect {
-  fill: var(--color-light);
+  fill: var(--color-banner);
   rx: 4px;
   ry: 4px;
 }
