--- a/src/index.css
+++ b/src/index.css
@@ -146,7 +146,6 @@ rect {
 
 .sidebar #routes {
   overflow-y: auto;
-  height: 50%;
 }
 
 .sidebar .inlinebar {
@@ -159,7 +158,7 @@ rect {
 #routes table {
   user-select: none;
   -webkit-user-select: none;
-  /* font-size: 0.5em; */
+  font-size: 0.7em;
 }
 
 .container3 {
