--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,7 @@ svg {
   max-width: 100%;
   display: block;
   background: var(--color-light);
+ 
 }
 
 input,
@@ -141,6 +142,14 @@ rect {
   position: relative;
 }
 
+#container4 svg {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+    height: auto;
+    height: intrinsic;
+}
+
 #container1 svg {
     width: 80%;
     height: auto;
@@ -151,6 +160,7 @@ rect {
     width: 100%;
     height: auto;
     height: intrinsic;
+    
 }
 
 #container1 .sidebar {
