Tweaks to text of article, made sidebar for vis1 same color as background to sidestep padding issue.

--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,7 @@ rect {
 }
 
 #container1 .sidebar {
-  background-color: var(--color-banner);
+  background-color: var(--color-light);
   float: inline-end;
   height: 100%;
   position: absolute;
